# Social_Website

./: .env.sample  .gitignore  README.md  pyproject.toml
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py
account/static/css/: base.css
account/templates/: base.html
account/templates/account/: dashboard.html
account/templates/account/user/: list.html
account/templates/registration/: login.html  password_reset_confirm.html
actions/: admin.py  models.py  utils.py
actions/migrations/: 0001_initial.py  0002_action_target_ct_action_target_id_and_more.py
bookmarks/: settings.py  urls.py
images/: admin.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/static/css/: bookmarklet.css
images/templates/images/image/: detail.html
