[project]
name = "social-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "django-model-utils>=5.0.0",
    "easy-thumbnails>=2.10.1",
    "pillow>=11.3.0",
    "pyopenssl>=25.1.0",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "social-auth-app-django>=5.5.1",
    "werkzeug>=3.1.3",
]
